made routes/confirm htmls for comic detail trade links

--- a/templates/base.html
+++ b/templates/base.html
@@ -296,15 +296,15 @@
                 <br />
     
                 <footer class="bg-dark text-center text-lg-start" >
-                  <!-- Grid container -->
+                  <!-- Grid container SUBSCRIBE box-->
                   <div class="container p-4 pb-0" >
                     <form action="">
-                      <!--Grid row-->
+                      <!--Grid row -->
                       <div class="row">
-                        <!--Grid column SUBSCRIBE box-->
+                        <!--Grid column -->
                         <div class="col-auto mb-4 mb-md-0">
                           <p class="pt-2">
-                            <strong>Sign up for our newsletter</strong>
+                            <strong>Join our list for updates & news</strong>
                           </p>
                         </div>
                         <!--Grid column-->
