--- a/templates/comic-detail.html
+++ b/templates/comic-detail.html
@@ -23,17 +23,17 @@
         <img src="../static/images/batman-p-250.jpg"></img>
         <div class="row ">
             <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" >
-                MESSAGE OWNER
+                <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" onclick="location.href='/newmail'">
+                MESSAGE OWNER 
               </button>
             </div>
             <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-secondary" data-mdb-ripple-color="dark" >
+                <button type="button" class="btn btn-outline-secondary" data-mdb-ripple-color="dark" onclick="location.href='/offertrade'">
                 OFFER A TRADE
               </button>
             </div>
             <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-success" data-mdb-ripple-color="dark" >
+                <button type="button" class="btn btn-outline-success" data-mdb-ripple-color="dark" onclick="location.href='/acceptoffer'">
                 ACCEPT OFFER
                 </button>
             </div>
