--- a/templates/index.html
+++ b/templates/index.html
@@ -34,20 +34,17 @@
               <div class="row centered mb-4">
                 <div class="col-12 centered">
 
+                  <div class="row">
 
                   <form action="">
-                    <!--Grid row -->
-                    <div class="row">
-                      <!--Grid column -->
+
                       <div class="col-auto mb-4 mb-md-0">
-                        <p class="pt-2 mt-5">
-                          <strong>Sign up for our newsletter</strong>
-                        </p>
+                        <h5 class="pt-2 mt-5">
+                          <strong>Join our list for updates & news</strong>
+                        </h5>
                       </div>
-                      <!--Grid column-->
-  
-                      <!--Grid column-->
-                      <div class="col-md-5 col-12 mb-4 mb-md-0">
+
+                      <div class=" mb-4 mb-md-0">
                         <!-- Email input -->
                         <div class="form-outline mb-4" >
                           <input
@@ -82,18 +79,16 @@
                           </div>
                         </div>
                       </div>
-                      <!--Grid column-->
-  
-                      <!--Grid column-->
-                      <div class="col-auto mb-4 mb-md-0">
-                        <!-- Submit button -->
+                      
+                      <!-- Submit button -->
+                      <div class="">
                         <button type="button" class="btn btn-primary mb-4" onclick="location.href='/subscribe'">
                           Subscribe
                         </button>
                       </div>
-                      <!--Grid column-->
+
                     </div>
-                    <!--Grid row-->
+
                   </form>
                 </div>
               </div>
