--- a/templates/newmail.html
+++ b/templates/newmail.html
@@ -158,7 +158,7 @@
 
                     <div class="row">
                         <div class="col-3">
-                            <button type="button" class="btn btn-danger" onclick="location.href='/messages'">
+                            <button type="button" class="btn btn-danger" onclick="window.history.go(-1)">
                                 Cancel
                               </button>
                         </div>
