made markedasmailed route

--- a/templates/comic-detail.html
+++ b/templates/comic-detail.html
@@ -37,6 +37,11 @@
                 ACCEPT OFFER
                 </button>
             </div>
+            <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-warning" data-mdb-ripple-color="dark" onclick="location.href='/markedasmailed'">
+                I HAVE MAILED THIS
+                </button>
+            </div>
 
         </div>
         
