minor change to index html

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
         padding-top: 2rem;
         padding-bottom: 2rem;
       ">
-          <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/batman-p-250.jpg"></img></div>
+          <div class="shadow-demo-2 shadow-3-strong"><a href="/comicdetail"><img src="../static/images/batman-p-250.jpg"></img></a></div>
           <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/captain_america-p-250.jpg"></img></div>
           <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/Dr_strange-p-500.jpg"></img></div>
           <div class="shadow-demo-2 shadow-3-strong"> <img src="../static/images/fantastic4_and_black_panther-p-250.jpg"></img></div>
