--- a/templates/messages.html
+++ b/templates/messages.html
@@ -23,11 +23,13 @@
             <th>Delete</th>
           </tr>
         </thead>
+
+        {% for message in messages %}
         <tbody>
           <tr class="" data-href="/maildetail">
-            <th scope="row"  data-msg-id="1357">2/3/22</th>
-            <td>RedLeader12</td>
-            <td>I am interested in trading your Iron man #53 for my Spiderman #12.  Please contact me by...</td>
+            <th scope="row"  data-msg-id={{ message.id }}>{{ message.maildate}}</th>
+            <td>USER GOES HERE</td>
+            <td>{{ message.subject }}</td>
             <td><a href="/maildetail"><i class="fa fa-eye"></i></a></td>
             <td><a href="/newmail"><i class="fa fa-envelope"></i></a></td>
             <td>
@@ -35,6 +37,7 @@
               data-mdb-target="#exampleModal"></i> 
             </td>
           </tr>
+          {% endfor %}
 
           <tr class="" data-href="/maildetail">
             <th scope="row"  data-msg-id="1357">5/13/22</th>
