--- a/templates/messages.html
+++ b/templates/messages.html
@@ -28,7 +28,7 @@
         <tbody>
           <tr class="" data-href="/maildetail">
             <th scope="row"  data-msg-id={{ message.id }}>{{ message.maildate}}</th>
-            <td>USER GOES HERE</td>
+            <td>{{ message.sender.fname }} {{ message.sender.lname }</td>
             <td>{{ message.subject }}</td>
             <td><a href="/maildetail"><i class="fa fa-eye"></i></a></td>
             <td><a href="/newmail"><i class="fa fa-envelope"></i></a></td>
