--- a/templates/reply.html
+++ b/templates/reply.html
@@ -38,6 +38,7 @@
                         background-size: 16px 18px;
                         background-position: 98% 50%;
                         "
+                        value="{{ replyto.fname}} {{ replyto.lname}}"
                     />
                     <label
                     class="form-label"
