--- a/templates/reply.html
+++ b/templates/reply.html
@@ -23,13 +23,14 @@
         <div class="col-9 mb-4">
             <!--Section: New Mail Message form-->
             <section class="shadow-5 p-4">
-                <form>
+                <form method="POST" action="/msgsent">
                     <!-- Text input for TO -->
                     <div class="form-outline mb-4">
                         <input
                         value="{{ replyto.fname}} {{ replyto.lname}}"
                         type="text"
                         id="mailto"
+                        name="mailto"
                         class="form-control"
                         autocomplete="off"
                         style="
@@ -57,6 +58,11 @@
                         <div class="form-notch-trailing"></div>
                     </div>
                     </div>
+
+                    <!-- the to we are replying back to -->
+                    <div>
+                        <input type="hidden" name="to_id" id="to_id" value="{{ replyto.id }}">
+                    </div>
            
         
                     <!-- Text input for Subject-->
@@ -65,6 +71,7 @@
                         value="Re: {{ this_msg.subject }}"
                         type="text"
                         id="subject"
+                        name="subject"
                         class="form-control"
                         autocomplete="off"
                         style="
@@ -111,6 +118,7 @@
                         <textarea
                         class="form-control"
                         id="message"
+                        name="message"
                         rows="4"
                         ></textarea>
                         <label
@@ -151,9 +159,8 @@
             
                     <!-- Submit button -->
                     <button
-                    type="button"
-                    class="btn btn-primary btn-block mb-4"
-                    onclick="location.href='/msgsent'"
+                    type="submit"
+                    class="btn btn-primary btn-block mb-4""
                     >
                     Send Message
                     </button>
