started a trade offered page and uploaded to github/heroku

--- a/templates/mystuff.html
+++ b/templates/mystuff.html
@@ -17,7 +17,7 @@
 
 
 
-    <h1>MY STUFF</h1>
+    <h1>MY STUFF *TESTING*</h1>
     <p><a href="#trades">My Trades</a> | <a href="#collection">My Collection</a> | <a href="#watchlist">My Watchlist</a></p>
     <h2 id="trades">My Trades</h2>
 
