--- a/templates/search.html
+++ b/templates/search.html
@@ -249,6 +249,69 @@
                         <td>8.9</td>
                         <td>Boston</td>
                       </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/Dr_strange-p-250.jpg"></img></td>
+                        <td>Dr. Strange</td>
+                        <td>101</td>
+                        <td>1975</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/iron_man-p-250.webp"></img></td>
+                        <td>Iron Man</td>
+                        <td>89</td>
+                        <td>1975</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/spider_man_coolest_pic-p-250.jpg"></img></td>
+                        <td>Spider-Man</td>
+                        <td>114</td>
+                        <td>1981</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/fantastic4_and_black_panther-p-250.jpg"></img></td>
+                        <td>Fantastic 4 & The Black Panther</td>
+                        <td>42</td>
+                        <td>1991</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/superman-p-250.jpg"></img></td>
+                        <td>Superman</td>
+                        <td>320</td>
+                        <td>1995</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/wonder_woman_cooler-p-250.jpg"></img></td>
+                        <td>Wonder Woman</td>
+                        <td>77</td>
+                        <td>1970</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
+                      <tr class="clickable-table-row" data-href="/comicdetail">
+                        <th scope="row"  data-comic-id="1357">1</th>
+                        <td class="table-image"><img src="../static/images/x-men_kitty.jpg"></img></td>
+                        <td>X-Men: Kitty Pride</td>
+                        <td>3</td>
+                        <td>1989</td>
+                        <td>9.0</td>
+                        <td>Bowling Green</td>
+                      </tr>
                     </tbody>
                 </table>
 
