prior to separating out frontend

--- a/templates/offertrade.html
+++ b/templates/offertrade.html
@@ -15,7 +15,14 @@
 
 {% block content %}
 
-<h1>YOUR OFFER OF A TRADE HAS BEEN SENT</h1>
+<h1>OFFER A TRADE</h1>
+
+
+
+
+
+
+
 <a onclick="window.history.go(-1)">BACK</a>
 
 {% endblock %}
