--- a/templates/search.html
+++ b/templates/search.html
@@ -17,9 +17,12 @@
 
 
 
-    <h1>COMICS FOR SALE AND TRADE</h1>
+    <h1>COMICS FOR SALE AND TRADE</h1> 
     <div class="row">
         <div class="col-md-2">
+
+          <!-- TODO: make search box work -->
+
             <!-- Search box -->
             <section>
                 <h5>Refine Your Search</h5>
