comicdetail pops from mystuff/my comics

--- a/templates/mystuff.html
+++ b/templates/mystuff.html
@@ -97,7 +97,7 @@
     <h2 id="collection">My Comic Collection</h2>
     <table class="table table-striped mb-5">
         <thead>
-          <tr class="clickable-table-row" data-href="/comicdetail">
+          <tr class="" >
             <th scope="col">#</th>
             <th scope="col">Image</th>
             <th scope="col">Title</th>
@@ -110,7 +110,7 @@
         <tbody>
 
         {% for mycomic in mycomics %}
-          <tr class="clickable-table-row" data-href="/comicdetail">
+          <tr class="clickable-table-row" data-href="/comicdetail/{{ mycomic.id}}">
             <th scope="row"  data-comic-id="{{ mycomic.id }}">1</th>
             <td class="table-image"><img src="{{ mycomic.thumbnail }}"></img></td>
             <td>{{ mycomic.title }}</td>
