--- a/templates/comic-detail.html
+++ b/templates/comic-detail.html
@@ -20,7 +20,7 @@
     <h1>Comic Detail</h1>
     <div class="row">
         <div class="col-3 mb-4">
-        <img src="../static/images/batman-p-250.jpg"></img>
+        <img src="{{ comic.thumbnail }}"></img>
         <div class="row ">
             <div class="col-12 pt-2 pb-2 d-flex justify-content-center">
                 <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" onclick="location.href='/newmail'">
