--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             class="d-flex justify-content-center align-items-center h-100"
           >
             <div class="text-white">
-              <h1 class="mb-3">The Comic Swap</h1>
+              <h1 class="mb-3">The Comic Swap - FROM LAPTOP</h1>
               <h4 class="mb-3">Your Safe Place to Trade</h4>
 
               <div class="row centered mb-4">
