added to non-functioning editcomics route

--- a/templates/edit-comic.html
+++ b/templates/edit-comic.html
@@ -12,7 +12,6 @@
 {% endblock %}
 
 
-
 {% block content %}
 
 
@@ -305,6 +304,7 @@
                             <div class="form-outline">
                                 <input  type="text" 
                                 id="source" 
+                                name="source"
                                 class="form-control" 
                                 value="{{ comic.assessed_source }}"
                                 style="
