--- a/templates/comic-detail.html
+++ b/templates/comic-detail.html
@@ -3,24 +3,18 @@
 {% block title %}The COMIC SWAP {% endblock %}
 {% block meta_content %}trade comics safely and easily {% endblock %}
 
-
-
 {% block links %}
 
-
-
 {% endblock %}
-
 
 
 {% block content %}
 
 
-
     <h1>Comic Detail</h1>
     <div class="row">
         <div class="col-3 mb-4">
-        <img src="{{ comic.thumbnail }}"></img>
+        <img src="{{ comic.thumbnail }}" style="max-width: 250px; height: auto;"></img>
         <div class="row ">
             <div class="col-12 pt-2 pb-2 d-flex justify-content-center">               
 
@@ -97,7 +91,7 @@
                         <div class="col">
                             <div class="form-outline">
                                 <input  type="text" 
-                                id="comictitle" 
+                                id="title" 
                                 name="comictitle" 
                                 value="{{ comic.title }}"
                                 class="form-control"
@@ -112,7 +106,7 @@
                 />
                 <label
                     class="form-label"
-                    for="comictitle"
+                    for="title"
                     style="margin-left: 0px"
                     >Title</label
                     >
